[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "test"
version = "3.1.2"
description = "test "

authors = []

dependencies = [
    "tabulate>=0.9.0",
    "stuart-cf-db-worker>=1.1.0",
    "my_package"==0.0.0,
]

requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.build]
includes = ["src/"]

