[project]
name = "Tests"
version = "0.1.0"
description = "Default"
dependencies = [ "gitpython>=3.1.43", "toml>=0.10.2", "my_packa==1.0.0",]
requires-python = "==3.9.*"
readme = "README.md"
[[project.authors]]
name = "anonyme"
email = "anonyme"

[project.license]
text = "MIT"

[tool.pdm]
distribution = false
